--- a/CalculoIMC/app/src/main/res/values/colors.xml
+++ b/CalculoIMC/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorSplashBG">#007f7f</color>
+    <color name="colorSplashBG">#FFF</color>
 </resources>
