Criação dos campos no fragments_calcuka_imc

--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_imc.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_imc.xml
@@ -1,12 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="110dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Calcula"/>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/lytTxtPeso"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/txtPeso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:inputType="numberDecimal"
+            android:hint="@string/txt_peso" />
+    </android.support.design.widget.TextInputLayout>
 
-</RelativeLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/lytTxtAltura"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/txtAltura"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:inputType="numberDecimal"
+            android:hint="@string/txt_altura" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/lytTxtResultado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/txtResultado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:hint="@string/txt_resultado" />
+    </android.support.design.widget.TextInputLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:id="@+id/btnCalcular"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:text="@string/btn_calcular"
+            android:layout_weight="1.0" />
+        <Button
+            android:id="@+id/btnLimpar"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:text="@string/btn_limpar"
+            android:layout_weight="1.0" />
+    </LinearLayout>
+
+</LinearLayout>
