--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_imc.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_imc.xml
@@ -34,20 +34,24 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/lytTxtResultado"
-        android:layout_width="100dip"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:textAlignment="center"
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/edtResultado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
+            android:textAlignment="center"
             android:hint="@string/txt_resultado" />
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
         <Button
             android:id="@+id/btnCalcular"
             android:layout_width="0.0dip"
@@ -60,14 +64,19 @@
             android:layout_height="match_parent"
             android:text="@string/btn_limpar"
             android:layout_weight="1.0" />
+        <Button
+            android:id="@+id/btnGravar"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:text="@string/btn_gravar"
+            android:layout_weight="1.0" />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAdd"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_input_add" />
+        android:textAlignment="center"
+        android:text="AQUI VAI O TIPO DE IMC"/>
 
 </LinearLayout>
