--- a/CalculoIMC/app/src/main/res/layout/fragments_lista_imc.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_lista_imc.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
     <ListView
-        android:layout_weight="0.2"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/lstImc"></ListView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabDel"
+        android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_input_delete" />
 
-</LinearLayout>
+</RelativeLayout>
