--- a/CalculoIMC/app/src/main/res/values/colors.xml
+++ b/CalculoIMC/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#0b7321</color>
     <color name="colorPrimaryDark">#0b7321</color>
     <color name="colorAccent">#0b7321</color>
-    <color name="colorSplashBG">#FFF</color>
-    <color name="colorBackground">#7b7775</color>
+    <color name="colorSplashBG">#7b7775</color>
+    <color name="colorBackground">#d5f4d0</color>
 </resources>
