--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
@@ -7,39 +7,73 @@
     android:paddingTop="50dip" >
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/lytTxtPeso"
+        android:id="@+id/lytTxtCintura"
         android:layout_width="100dip"
         android:layout_height="wrap_content">
         <EditText
-            android:id="@+id/edtPeso"
+            android:id="@+id/edtCintura"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:inputType="numberDecimal"
-            android:hint="@string/txt_peso" />
+            android:hint="@string/txt_cintura" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/lytTxtAltura"
+        android:layout_alignBottom="@id/edtPeso"
+        android:id="@+id/lytTxtQuadril"
         android:layout_width="100dip"
         android:layout_height="wrap_content">
         <EditText
-            android:id="@+id/edtAltura"
+            android:id="@+id/edtQuadril"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:inputType="numberDecimal"
-            android:hint="@string/txt_altura" />
+            android:hint="@string/txt_quadril" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/lytTxtResultado"
+        android:id="@+id/lytTxtIdade"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/edtIdade"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:inputType="number"
+            android:hint="@string/txt_idade"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/rdgSexo">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rgd_femi"
+            android:id="@+id/rdbFemi"
+            android:checked="true"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rgd_masc"
+            android:id="@+id/rdbMasc"/>
+    </RadioGroup>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/lytTxtResultadoRcq"
         android:layout_width="300dp"
         android:layout_gravity="center"
         android:textAlignment="center"
         android:layout_height="wrap_content">
         <EditText
-            android:id="@+id/edtResultado"
+            android:id="@+id/edtResultadoRcq"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
@@ -74,7 +108,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/txtTipo"
+        android:id="@+id/txtTipoRcq"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
