--- a/CalculoIMC/app/src/main/res/values/colors.xml
+++ b/CalculoIMC/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0b7321</color>
-    <color name="colorPrimaryDark">#0b7321</color>
-    <color name="colorAccent">#0b7321</color>
+    <color name="colorPrimary">#308fd2</color>
+    <color name="colorPrimaryDark">#308fd2</color>
+    <color name="colorAccent">#308fd2</color>
     <color name="colorSplashBG">#7b7775</color>
-    <color name="colorBackground">#d5f4d0</color>
+    <color name="colorBackground">#ffffff</color>
 </resources>
