--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
@@ -115,5 +115,12 @@
         android:textAlignment="center"
         android:inputType="text"
         style="@style/styleClaImc"/>
+    <TextView
+        android:id="@+id/txtFraseRcq"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:inputType="text"
+        style="@style/styleFraImc"/>
 
 </LinearLayout>
