--- a/CalculoIMC/app/src/main/res/values/styles.xml
+++ b/CalculoIMC/app/src/main/res/values/styles.xml
@@ -27,8 +27,16 @@
 
     <!-- Classificação IMC -->
     <style name="styleClaImc">
-        <item name="android:textSize">38sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textColor">#000</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <!-- Classificação Frase IMC -->
+    <style name="styleFraImc">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
