--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
@@ -46,6 +46,13 @@
             android:hint="@string/txt_idade"/>
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/rdg_sexo" />
+
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -55,14 +62,14 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rgd_femi"
+            android:drawableRight="@drawable/radio_button_selector_female"
             android:id="@+id/rdbFemi"
             android:checked="true"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rgd_masc"
+            android:drawableRight="@drawable/radio_button_selector_male"
             android:id="@+id/rdbMasc"/>
     </RadioGroup>
 
