--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_rcq.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="50dip" >
+    android:paddingTop="50dip">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/lytTxtCintura"
@@ -19,7 +19,17 @@
             android:hint="@string/txt_cintura" />
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_cm"
+        android:layout_toRightOf="@+id/lytTxtCintura"
+        android:layout_below="@id/lytTxtPeso"
+        android:layout_marginTop="30dp"
+        android:textStyle="bold"/>
+
     <android.support.design.widget.TextInputLayout
+        android:layout_below="@+id/lytTxtCintura"
         android:layout_alignBottom="@id/edtPeso"
         android:id="@+id/lytTxtQuadril"
         android:layout_width="100dip"
@@ -33,7 +43,17 @@
             android:hint="@string/txt_quadril" />
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_cm"
+        android:layout_toRightOf="@+id/lytTxtQuadril"
+        android:layout_below="@id/lytTxtCintura"
+        android:layout_marginTop="30dp"
+        android:textStyle="bold"/>
+
     <android.support.design.widget.TextInputLayout
+        android:layout_below="@+id/lytTxtQuadril"
         android:id="@+id/lytTxtIdade"
         android:layout_width="100dip"
         android:layout_height="wrap_content">
@@ -47,13 +67,16 @@
     </android.support.design.widget.TextInputLayout>
 
     <TextView
+        android:layout_below="@id/lytTxtIdade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
+        android:id="@+id/txtSexo"
         android:text="@string/rdg_sexo" />
 
     <RadioGroup
+        android:layout_below="@id/txtSexo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -73,23 +96,20 @@
             android:id="@+id/rdbMasc"/>
     </RadioGroup>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/lytTxtResultadoRcq"
-        android:layout_width="300dp"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/edtResultadoRcq"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:textColor="#000"
-            android:textAlignment="center"
-            android:hint="@string/txt_resultado" />
-    </android.support.design.widget.TextInputLayout>
+    <TextView
+        android:layout_toRightOf="@id/lytTxtCintura"
+        android:layout_below="@id/lytTxtCintura"
+        android:id="@+id/TxtResultadoRcq"
+        android:gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:singleLine="true"
+        style="@style/styleResultado"/>
 
     <LinearLayout
+        android:id="@+id/btn_botoes"
+        android:layout_below="@id/rdgSexo"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -106,15 +126,10 @@
             android:layout_height="match_parent"
             android:text="@string/btn_limpar"
             android:layout_weight="1.0" />
-        <!--<Button-->
-            <!--android:id="@+id/btnGravar"-->
-            <!--android:layout_width="0.0dip"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:text="@string/btn_gravar"-->
-            <!--android:layout_weight="1.0" />-->
     </LinearLayout>
 
     <TextView
+        android:layout_below="@id/btn_botoes"
         android:id="@+id/txtTipoRcq"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
@@ -123,6 +138,7 @@
         android:inputType="text"
         style="@style/styleClaImc"/>
     <TextView
+        android:layout_below="@id/txtTipoRcq"
         android:id="@+id/txtFraseRcq"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -130,4 +146,4 @@
         android:inputType="text"
         style="@style/styleFraImc"/>
 
-</LinearLayout>
+</RelativeLayout>
