--- a/CalculoIMC/app/src/main/res/values/styles.xml
+++ b/CalculoIMC/app/src/main/res/values/styles.xml
@@ -39,4 +39,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- Resultado -->
+    <style name="styleResultado">
+        <item name="android:textSize">48sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
