--- a/teste/app/src/main/res/layout/fragments_calcula_imc.xml
+++ b/teste/app/src/main/res/layout/fragments_calcula_imc.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -19,25 +19,7 @@
             android:hint="@string/txt_peso" />
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_kg"
-        android:layout_toRightOf="@id/lytTxtPeso"
-        android:layout_marginTop="30dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_mt"
-        android:layout_toRightOf="@+id/lytTxtAltura"
-        android:layout_below="@id/lytTxtPeso"
-        android:layout_marginTop="30dp"
-        android:textStyle="bold"/>
-
     <android.support.design.widget.TextInputLayout
-        android:layout_below="@id/lytTxtPeso"
         android:id="@+id/lytTxtAltura"
         android:layout_width="100dip"
         android:layout_height="wrap_content">
@@ -50,20 +32,23 @@
             android:hint="@string/txt_altura" />
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_toRightOf="@id/lytTxtPeso"
-        android:layout_below="@id/lytTxtPeso"
-        android:id="@+id/TxtResultadoRcq"
-        android:gravity="right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:singleLine="true"
-        style="@style/styleResultado"/>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/lytTxtResultado"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/edtResultado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:textColor="#000"
+            android:textAlignment="center"
+            android:hint="@string/txt_resultado" />
+    </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
-        android:layout_below="@id/lytTxtAltura"
-        android:id="@+id/btn_botoesIMC"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -80,10 +65,15 @@
             android:layout_height="match_parent"
             android:text="@string/btn_limpar"
             android:layout_weight="1.0" />
+        <!--<Button-->
+            <!--android:id="@+id/btnGravar"-->
+            <!--android:layout_width="0.0dip"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:text="@string/btn_gravar"-->
+            <!--android:layout_weight="1.0" />-->
     </LinearLayout>
 
     <TextView
-        android:layout_below="@id/btn_botoesIMC"
         android:id="@+id/txtTipo"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
@@ -91,13 +81,5 @@
         android:textAlignment="center"
         android:inputType="text"
         style="@style/styleClaImc"/>
-    <TextView
-        android:layout_below="@id/txtTipo"
-        android:id="@+id/txtFrase"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:inputType="text"
-        style="@style/styleFraImc"/>
 
-</RelativeLayout>
+</LinearLayout>
