--- a/CalculoIMC/app/src/main/res/layout/fragments_calcula_imc.xml
+++ b/CalculoIMC/app/src/main/res/layout/fragments_calcula_imc.xml
@@ -51,6 +51,37 @@
     </android.support.design.widget.TextInputLayout>
 
     <TextView
+        android:layout_below="@id/lytTxtAltura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/txtSexo"
+        android:text="@string/rdg_sexo" />
+
+    <RadioGroup
+        android:id="@+id/rdg_sexo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtSexo"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:drawableRight="@drawable/radio_button_selector_female"
+            android:id="@+id/rdb_female"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableRight="@drawable/radio_button_selector_male"
+            android:id="@+id/rdb_male"/>
+
+    </RadioGroup>
+
+    <TextView
         android:layout_toRightOf="@id/lytTxtPeso"
         android:layout_below="@id/lytTxtPeso"
         android:id="@+id/TxtResultadoRcq"
@@ -62,7 +93,7 @@
         style="@style/styleResultado"/>
 
     <LinearLayout
-        android:layout_below="@id/lytTxtAltura"
+        android:layout_below="@id/rdg_sexo"
         android:id="@+id/btn_botoesIMC"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
@@ -94,6 +125,14 @@
     <TextView
         android:layout_below="@id/txtTipo"
         android:id="@+id/txtFrase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:inputType="text"
+        style="@style/styleFraImc"/>
+    <TextView
+        android:layout_below="@id/txtFrase"
+        android:id="@+id/txtPesoIdeal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
